[tool.poetry]
name = "game_statistics"
version = "0.1.0"
description = ""
authors = ["thegastroler"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
SQLAlchemy = "^1.4.46"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
